2008-04-25 Enforce python >= 2.4; remove subprocess build - EF

2008-04-25 Enforce the numpy requirement at build time - JDH

2008-04-24 Make numpy 1.1 and python 2.3 required when importing
           matplotlib - EF

2008-04-24 Fix compilation issues on VS2003 (Thanks Martin Spacek for
           all the help) - MGD

2008-04-24 Fix sub/superscripts when the size of the font has been
           changed - MGD

2008-04-22 Use "svg.embed_char_paths" consistently everywhere - MGD

2008-04-20 Add support to MaxNLocator for symmetric axis autoscaling. - EF

2008-04-20 Fix double-zoom bug. - MM

2008-04-15 Speed up color mapping. - EF

2008-04-12 Speed up zooming and panning of dense images. - EF

2008-04-11 Fix global font rcParam setting after initialization
           time. - MGD

2008-04-11 Revert commits 5002 and 5031, which were intended to
           avoid an unnecessary call to draw(). 5002 broke saving
           figures before show(). 5031 fixed the problem created in
           5002, but broke interactive plotting. Unnecessary call to
           draw still needs resolution - DSD

2008-04-07 Improve color validation in rc handling, suggested
           by Lev Givon - EF

2008-04-02 Allow to use both linestyle definition arguments, '-' and
           'solid' etc. in plots/collections - MM

2008-03-27 Fix saving to Unicode filenames with Agg backend
           (other backends appear to already work...)
           (Thanks, Christopher Barker) - MGD

2008-03-26 Fix SVG backend bug that prevents copying and pasting in
           Inkscape (thanks Kaushik Ghose) - MGD

2008-03-24 Removed an unnecessary call to draw() in the backend_qt*
           mouseReleaseEvent. Thanks to Ted Drain - DSD

2008-03-23 Fix a pdf backend bug which sometimes caused the outermost
           gsave to not be balanced with a grestore. - JKS

2008-03-20 Fixed a minor bug in ContourSet._process_linestyles when
           len(linestyles)==Nlev - MM
